4주차 피드백 반영: 예외처리 및 dto